--- a/enter-api-key.html
+++ b/enter-api-key.html
@@ -11,9 +11,10 @@
       <input type="email" id="apiKey" name="apiKey" />
       <button id="submitApiKey">Submit</button>
     </form>
-
+    <script src="config.js"></script>
     <script>
       let rootPath = "https://mysite.itvarsity.org/api/ContactBook/";
+
       document
         .getElementById("submitApiKey")
         .addEventListener("click", setApiKey);
@@ -21,18 +22,19 @@
       function setApiKey(e) {
         e.preventDefault();
 
-        apiKey = document.getElementById("apiKey").value;
+        let apiKey = document.getElementById("apiKey").value;
+
         fetch(rootPath + "controller/api-key/?apiKey" + apiKey)
           .then(function (response) {
             return response.text();
           })
 
           .then(function (data) {
-            if (data == "i") {
-              localStorag.setItems("apiKey", apiKey);
-              window.open("indx.html", "_self");
+            if (data.trim() == "i") {
+              localStorage.setItems("apiKey", apiKey);
+              window.open("index.html", "_self");
             } else {
-              alert(data + "Invalid API Key entered");
+              alert("Invalid API Key entered" + data);
             }
           });
       }
