--- a/index.html
+++ b/index.html
@@ -11,15 +11,49 @@
     <button id="addContacts" type="button">Add Contacts</button>
     <script src="config.js"></script>
     <script>
+      document
+        .getElementById("refresh")
+        .addEventListener("click", fetchContacts);
+      document
+        .getElementById("addContacts")
+        .addEventListener("click", addContacts);
+
       function fetchContacts() {
         fetch(rootPath + "controller/get-contacts/")
           .then(function (response) {
             return response.json();
           })
           .then(function (data) {
-            //displayOutput(data);
-            console.log(data);
+            displayOutput(data);
           });
+      }
+
+      function displayOutput(data) {
+        let output = "<table>";
+
+        for (let i = 0; i < data.length; i++) {
+          output += `
+              <tr>
+                <td>
+                  <img src=" ${rootPath}controller/uploads${data[a].avatar}" width="40"/>
+                </td>
+                <td>
+                  <h5>${data[a].firstname}</h5>
+                </td>
+                <td>
+                  <h5>${data[a].lastname}</h5>
+                </td>
+                <td>
+                  <h5></h5>
+                </td>
+              </tr>
+            `;
+        }
+        output += "</table>";
+        document.getElementById("table").innerHTML = output;
+      }
+      function addContacts() {
+        window.open("add-contacts.html", "_self");
       }
     </script>
   </body>
